src/content/docs/manual/bluetape4k-projects/1.11/getting-started.md
---
slug: "manual/bluetape4k-projects/1.11/getting-started"
title: Getting started
description: Select and install a bluetape4k-projects module, then move from guide to manual to runnable example.
manual:
  id: "getting-started"
  repository: "bluetape4k-projects"
  group: "overview"
  kind: "guide"
  sourceCommit: "e1463bff0f864add7c54b7188f492cfe36336cdd"
  sourcePath: "docs/manual/en/getting-started.md"
  minorVersion: "1.11"
  releaseRef: "1.11.0"
  releaseCommit: "6187173b58e8b4c5c435c145e00e94708f31ef75"
  sourceDir: "docs/manual"
  layer: "build"
---


## 1. Import the BOM

Choose the published `bluetape4k-dependencies` version for your application and let the central BOM align every bluetape4k artifact.

```kotlin
dependencies {
    implementation(platform("io.github.bluetape4k:bluetape4k-dependencies:<version>"))
}
```

Here, `<version>` is the published version of `bluetape4k-dependencies`. The central BOM manages repository BOM versions, so consumers do not align them separately.

## 2. Add one task-focused module

Choose the smallest module that owns the capability. A module manual provides the exact artifact coordinate and compatibility notes.

```kotlin
dependencies {
    implementation("io.github.bluetape4k:bluetape4k-core")
}
```

## 3. Follow the evidence trail

Read the guide for orientation, use the module manual for contracts and failure behavior, then run a linked example or workshop. Source and test links in each manual are the final authority when a README summary is ambiguous.

## 4. Validate the environment

The repository uses Java 21 and Kotlin 2.3. Framework-specific manuals state narrower Spring Boot, Ktor, database, container, or native requirements.
